Overlay and background images fade working - overflow issue fixed

--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,17 @@ body, html {
     background-color: black;
     height: 100%;
     margin: 0;
+    overflow: hidden !important;
 }
 
 #wrapper {
     opacity: 0;
-    transition: opacity 3s;
+    transition: opacity 7s linear 9s;
+    height: 100%;
+}
+
+#overlay-wrapper {
+    position: relative;
     height: 100%;
 }
 
@@ -34,18 +40,16 @@ body, html {
     transition-property: background-position;
     transition-duration: 3s;
     height: 100%;
+    opacity: inherit;
 }
 
 #overlay-img {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
+    background-image: url("../assets/img/overlay.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
     opacity: 1;
-    transition-property: opacity;
-    transition-duration: 4s;
+    transition: opacity 4s ease 4s;
 }
 
 .fas {
@@ -88,6 +92,8 @@ body, html {
     top: 0;
     margin-left: 30px;
     opacity: 1;
+    transition-delay: 7s;
+    transition-duration: 4s;
 }
 
 #text-9 {
